--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,7 +1,9 @@
-﻿# This is the main configuration file for the application.
+# This is the main configuration file for the application.
 # ~~~~~
 application.name=DaadeBlog
 
+# Import the maven module
+module.maven=${play.path}/modules/maven
 
 # Import the jelastic module
 module.jelastic=${play.path}/modules/jelastic
@@ -88,12 +90,12 @@ application.log.path=/log4j.properties
 application.log.system.out=on
 
 # Database configuration
-# ~~~~~ 
+# ~~~~~
 # Enable a database engine if needed.
 #
 # To quickly set up a development database, use either:
-#   - mem : for a transient in memory database (H2 in memory)
-#   - fs  : for a simple file written database (H2 file stored)
+# - mem : for a transient in memory database (H2 in memory)
+# - fs : for a simple file written database (H2 file stored)
 db=mem
 #
 # To connect to a local MySQL5 database, use:
@@ -137,7 +139,7 @@ db=mem
 # Specify the custom JPA dialect to use here (default to guess):
 # jpa.dialect=org.hibernate.dialect.PostgreSQLDialect
 #
-# Specify the ddl generation pattern to use. Set to none to disable it 
+# Specify the ddl generation pattern to use. Set to none to disable it
 # (default to update in DEV mode, and none in PROD mode):
 jpa.ddl=create
 #
@@ -152,7 +154,7 @@ jpa.ddl=create
 attachments.path=data/attachments
 
 # Memcached configuration
-# ~~~~~ 
+# ~~~~~
 # Enable memcached if needed. Otherwise a local cache is used.
 # memcached=enabled
 #
@@ -193,7 +195,7 @@ attachments.path=data/attachments
 # http.proxyPassword = jojo
 
 # Mail configuration
-# ~~~~~ 
+# ~~~~~
 # Default is to use a mock Mailer
 mail.smtp=mock
 
@@ -224,7 +226,7 @@ mail.smtp=mock
 # Open file from errors pages
 # ~~~~~
 # If your text editor supports opening files by URL, Play! will
-# dynamically link error pages to files 
+# dynamically link error pages to files
 #
 # Example, for textmate:
 # play.editor=txmt://open?url=file://%s&line=%s
@@ -240,7 +242,7 @@ mail.smtp=mock
 # Configuration of the blog engine
 # ~~~~~
 blog.title=مرحبا بكم
-blog.baselineفريق الضاد فريقُُ عربي %100 هدفهم نشر الإعلام الآلي باللغة العربية و تقاسم الخبرات و التجارب
+blog.baseline=فريق الضاد فريقُُ عربي %100 هدفهم نشر الإعلام الآلي باللغة العربية و تقاسم الخبرات و التجارب
 
 
 # Import the crud module
